--- a/Zedit-UIKit/Base.lproj/LaunchScreen.storyboard
+++ b/Zedit-UIKit/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23090" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23079"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,24 +16,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zedit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oli-cP-LMq">
-                                <rect key="frame" x="151" y="470" width="91" height="48"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="zedit_logo" translatesAutoresizingMaskIntoConstraints="NO" id="VKG-as-Kdv">
-                                <rect key="frame" x="156.66666666666666" y="382" width="80" height="80"/>
+                                <rect key="frame" x="156.66666666666666" y="386" width="80" height="80"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Oli-cP-LMq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="6Fc-Ch-4nt"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Oli-cP-LMq" secondAttribute="bottom" constant="300" id="G9U-ky-p8O"/>
-                            <constraint firstItem="Oli-cP-LMq" firstAttribute="centerX" secondItem="VKG-as-Kdv" secondAttribute="centerX" id="KyM-Uj-p5A"/>
-                            <constraint firstItem="Oli-cP-LMq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="151" id="bUv-qh-WZI"/>
-                            <constraint firstItem="Oli-cP-LMq" firstAttribute="top" secondItem="VKG-as-Kdv" secondAttribute="bottom" constant="8" id="hWL-rU-3JU"/>
+                            <constraint firstItem="VKG-as-Kdv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="P3t-zg-ga1"/>
+                            <constraint firstItem="VKG-as-Kdv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="hS0-ey-0Sr"/>
                         </constraints>
                     </view>
                 </viewController>
