--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
@@ -10,6 +11,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
         <!--My Projects-->
         <scene sceneID="bza-Y6-8j9">
             <objects>
@@ -20,14 +22,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="project" id="71M-M2-Fer" customClass="ProjectsTableViewCell" customModule="Zedit" customModuleProvider="target">
-                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="43.333332061767578"/>
+                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="42.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="71M-M2-Fer" id="Kpv-LC-8tS">
-                                    <rect key="frame" x="0.0" y="0.0" width="353" height="43.333332061767578"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="353" height="42.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHv-zq-cQ6">
-                                            <rect key="frame" x="20" y="10.999999999999998" width="313" height="21.333333333333329"/>
+                                            <rect key="frame" x="20" y="11.000000000000002" width="313" height="20.666666666666671"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -70,7 +72,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="swO-YB-DA9">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="swO-YB-DA9">
                                 <rect key="frame" x="10" y="113" width="373" height="695"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zedit" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vnb-1O-hUC">
@@ -79,32 +81,38 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ztk-iJ-SvA">
-                                        <rect key="frame" x="0.0" y="40.666666666666657" width="373" height="34.333333333333343"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ztk-iJ-SvA">
+                                        <rect key="frame" x="0.0" y="50.666666666666657" width="373" height="34.333333333333343"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="osb-uZ-fF2">
-                                                <rect key="frame" x="0.0" y="0.0" width="186.66666666666666" height="34.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="184" height="34.333333333333336"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                <connections>
+                                                    <segue destination="yWS-xt-nX1" kind="show" id="8cV-O4-ayN"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cZX-in-2UY">
-                                                <rect key="frame" x="186.66666666666663" y="0.0" width="186.33333333333337" height="34.333333333333336"/>
+                                                <rect key="frame" x="189" y="0.0" width="184" height="34.333333333333336"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                <connections>
+                                                    <segue destination="yWS-xt-nX1" kind="show" id="ofK-gL-Sxh"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y3O-e7-3lb">
-                                        <rect key="frame" x="0.0" y="75" width="373" height="0.0"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Y3O-e7-3lb">
+                                        <rect key="frame" x="0.0" y="95" width="373" height="34.333333333333343"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recent Projects" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1iu-i7-bBK">
-                                                <rect key="frame" x="0.0" y="0.0" width="120" height="0.0"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recent Projects" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1iu-i7-bBK">
+                                                <rect key="frame" x="0.0" y="0.0" width="228" height="34.333333333333336"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAc-lZ-nPo">
-                                                <rect key="frame" x="120" y="0.0" width="253" height="0.0"/>
+                                                <rect key="frame" x="299" y="0.0" width="74" height="34.333333333333336"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="See all"/>
                                                 <connections>
@@ -114,8 +122,7 @@
                                         </subviews>
                                     </stackView>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="D0q-xm-sFR">
-                                        <rect key="frame" x="0.0" y="75" width="373" height="565.33333333333337"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <rect key="frame" x="0.0" y="139.33333333333334" width="373" height="511.33333333333326"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="U7e-ju-Dps">
                                             <size key="itemSize" width="128" height="128"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -136,24 +143,14 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Se1-xH-nvz">
-                                                            <rect key="frame" x="43.333333333333329" y="52.666666666666664" width="41.333333333333329" height="20.333333333333336"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="Caa-4z-XtB" firstAttribute="centerX" secondItem="Hw8-KS-4K7" secondAttribute="centerX" id="9ZB-oY-eHq"/>
-                                                        <constraint firstItem="Caa-4z-XtB" firstAttribute="firstBaseline" secondItem="Se1-xH-nvz" secondAttribute="firstBaseline" id="Cca-Ij-avw"/>
                                                         <constraint firstItem="Caa-4z-XtB" firstAttribute="centerY" secondItem="Hw8-KS-4K7" secondAttribute="centerY" id="Uzp-Y1-dOt"/>
-                                                        <constraint firstItem="Caa-4z-XtB" firstAttribute="baseline" secondItem="Se1-xH-nvz" secondAttribute="baseline" id="W79-ri-k1h"/>
-                                                        <constraint firstItem="Caa-4z-XtB" firstAttribute="leading" secondItem="Se1-xH-nvz" secondAttribute="leading" id="fLS-4d-gsF"/>
                                                         <constraint firstItem="Caa-4z-XtB" firstAttribute="top" secondItem="Hw8-KS-4K7" secondAttribute="top" constant="52.66666666666697" id="n13-WV-C4H"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
                                                 <connections>
-                                                    <outlet property="projectDetailsLabel" destination="Se1-xH-nvz" id="VA7-QL-Thw"/>
                                                     <outlet property="projectNameLabel" destination="Caa-4z-XtB" id="aBV-oW-cOx"/>
                                                     <segue destination="9Lp-0K-qM7" kind="show" identifier="HomeMain" id="41F-4h-AHy"/>
                                                 </connections>
@@ -161,7 +158,7 @@
                                         </cells>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ijf-MK-klX">
-                                        <rect key="frame" x="0.0" y="640.33333333333337" width="373" height="54.666666666666629"/>
+                                        <rect key="frame" x="0.0" y="660.66666666666663" width="373" height="34.333333333333371"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                         <connections>
@@ -170,13 +167,7 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Y3O-e7-3lb" firstAttribute="top" secondItem="ztk-iJ-SvA" secondAttribute="bottom" id="9x7-7N-cAZ"/>
-                                    <constraint firstItem="ztk-iJ-SvA" firstAttribute="top" secondItem="Vnb-1O-hUC" secondAttribute="bottom" id="NFr-VK-ec0"/>
-                                    <constraint firstItem="D0q-xm-sFR" firstAttribute="top" secondItem="ztk-iJ-SvA" secondAttribute="bottom" id="NeH-pZ-hOS"/>
-                                    <constraint firstItem="Vnb-1O-hUC" firstAttribute="top" secondItem="swO-YB-DA9" secondAttribute="top" id="aV5-rW-rJZ"/>
-                                    <constraint firstItem="ztk-iJ-SvA" firstAttribute="top" secondItem="Vnb-1O-hUC" secondAttribute="bottom" id="cQv-3j-wib"/>
-                                    <constraint firstItem="Y3O-e7-3lb" firstAttribute="top" secondItem="ztk-iJ-SvA" secondAttribute="bottom" id="juW-Eg-PKe"/>
-                                    <constraint firstItem="Ijf-MK-klX" firstAttribute="top" secondItem="D0q-xm-sFR" secondAttribute="bottom" id="s4l-xs-Ixw"/>
+                                    <constraint firstItem="Vnb-1O-hUC" firstAttribute="top" secondItem="swO-YB-DA9" secondAttribute="top" id="8a3-1P-J3D"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -1051,13 +1042,17 @@
     <inferredMetricsTieBreakers>
         <segue reference="41F-4h-AHy"/>
         <segue reference="sgf-hx-G6G"/>
-        <segue reference="aCe-Es-j7s"/>
+        <segue reference="4vM-Vw-qE0"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="camera.filters" catalog="system" width="128" height="119"/>
+        <image name="circle_gradient" width="516" height="483"/>
         <image name="diamond.circle" catalog="system" width="128" height="123"/>
+        <image name="photo.badge.plus" catalog="system" width="128" height="97"/>
         <image name="plus" catalog="system" width="128" height="113"/>
+        <image name="square.and.arrow.up" catalog="system" width="110" height="128"/>
         <image name="video.fill" catalog="system" width="128" height="81"/>
+        <image name="zedit_logo" width="80" height="80"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
