--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -326,16 +326,6 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4N-Wn-d8f">
-                                <rect key="frame" x="10" y="778" width="373" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" image="plus" catalog="system">
-                                    <attributedString key="attributedTitle"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <segue destination="yWS-xt-nX1" kind="show" identifier="Create" id="zhC-S8-Szd"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="VlY-60-N81"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -343,10 +333,7 @@
                             <constraint firstItem="VlY-60-N81" firstAttribute="trailing" secondItem="vFO-JR-S6s" secondAttribute="trailing" id="93O-Sy-aK9"/>
                             <constraint firstItem="VlY-60-N81" firstAttribute="bottom" secondItem="vFO-JR-S6s" secondAttribute="bottom" id="LAX-2u-gOd"/>
                             <constraint firstItem="vFO-JR-S6s" firstAttribute="top" secondItem="VlY-60-N81" secondAttribute="top" constant="8" id="VWv-Iv-wXY"/>
-                            <constraint firstItem="VlY-60-N81" firstAttribute="trailing" secondItem="I4N-Wn-d8f" secondAttribute="trailing" constant="10" id="dIo-9S-QTU"/>
                             <constraint firstItem="vFO-JR-S6s" firstAttribute="leading" secondItem="VlY-60-N81" secondAttribute="leading" id="j5p-ga-BQ5"/>
-                            <constraint firstItem="I4N-Wn-d8f" firstAttribute="leading" secondItem="VlY-60-N81" secondAttribute="leading" constant="10" id="mDq-Rv-TxN"/>
-                            <constraint firstItem="VlY-60-N81" firstAttribute="bottom" secondItem="I4N-Wn-d8f" secondAttribute="bottom" constant="5" id="tbz-Hd-32y"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="XZH-BY-trp"/>
@@ -704,9 +691,17 @@
                                         <buttonConfiguration key="configuration" style="tinted"/>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kgf-CK-Ttu">
-                                        <rect key="frame" x="0.0" y="54.333333333333314" width="377" height="585.66666666666674"/>
+                                        <rect key="frame" x="0.0" y="54.333333333333343" width="377" height="505.66666666666663"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="anf-Uy-gdd">
+                                        <rect key="frame" x="0.0" y="580" width="377" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="FuO-da-vyE"/>
+                                        </constraints>
+                                        <viewLayoutGuide key="contentLayoutGuide" id="PIJ-yh-O6B"/>
+                                        <viewLayoutGuide key="frameLayoutGuide" id="zxk-ge-F3S"/>
+                                    </scrollView>
                                     <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="280" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="wP6-cX-dja">
                                         <rect key="frame" x="0.0" y="660" width="377" height="55"/>
                                         <subviews>
@@ -752,6 +747,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="videoPreviewView" destination="Kgf-CK-Ttu" id="sAW-vr-Sqa"/>
+                        <outlet property="videoScrubber" destination="anf-Uy-gdd" id="nuE-xE-65n"/>
                         <outlet property="videoSelector" destination="JdV-El-Sxq" id="PGD-GU-BbO"/>
                     </connections>
                 </viewController>
@@ -1143,7 +1139,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="41F-4h-AHy"/>
+        <segue reference="bAC-QI-ard"/>
         <segue reference="sgf-hx-G6G"/>
         <segue reference="4vM-Vw-qE0"/>
     </inferredMetricsTieBreakers>
@@ -1152,7 +1148,6 @@
         <image name="circle_gradient" width="516" height="483"/>
         <image name="diamond.circle" catalog="system" width="128" height="123"/>
         <image name="photo.badge.plus" catalog="system" width="128" height="97"/>
-        <image name="plus" catalog="system" width="128" height="113"/>
         <image name="square.and.arrow.up" catalog="system" width="110" height="128"/>
         <image name="video.fill" catalog="system" width="128" height="81"/>
         <image name="zedit_logo" width="80" height="80"/>
